--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Exam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1fSSLwzhvqmnKk4guNfDv",
+      "authorship_tag": "ABX9TyMSlrUAsEm7X0iiw0HuuOXj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,34 +49,57 @@
     {
       "cell_type": "code",
       "source": [
-        "n = input(\"Enter Number to calculate sum\")\n",
-        "n = int (n)\n",
-        "sum = 0;\n",
-        "for num in range(0, n+1, 1):\n",
-        "  sum = sum+num;\n",
-        "  print(\"SUM of first \", n, \"numbers is: \", sum)\n",
-        "  if sum >=10:\n",
-        "    break"
+        "n=[]\n",
+        "x=0\n",
+        "for x in range(1,11):\n",
+        "  while True:\n",
+        "    y=float(input(\"Enter number:\"))\n",
+        "    if y<5:\n",
+        "     break\n",
+        "    else:\n",
+        "     print(\"Please input numbers that are less than 5\")\n",
+        "  n.append(y)\n",
+        "  x=x+1\n",
+        "\n",
+        "x=0\n",
+        "summation=0\n",
+        "print(\"The numbers you have entered are:\",n)\n",
+        "print(\"\")\n",
+        "for x in n:\n",
+        "  if x<5:\n",
+        "    summation=summation+x\n",
+        "print(\"The summation of all numbers that are less than 5 are equals to\",summation)"
       ],
       "metadata": {
         "id": "em-BkkIzduXK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bdf8e6d-6993-4c00-b101-bb59a336ff21"
+        "outputId": "e6c33cbf-9f76-45b8-b670-50452d40907e"
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Number to calculate sum12345\n",
-            "SUM of first  12345 numbers is:  0\n",
-            "SUM of first  12345 numbers is:  1\n",
-            "SUM of first  12345 numbers is:  3\n",
-            "SUM of first  12345 numbers is:  6\n",
-            "SUM of first  12345 numbers is:  10\n"
+            "Enter number:1\n",
+            "Enter number:2\n",
+            "Enter number:3\n",
+            "Enter number:4\n",
+            "Enter number:5\n",
+            "Please input numbers that are less than 5\n",
+            "Enter number:4\n",
+            "Enter number:3\n",
+            "Enter number:2\n",
+            "Enter number:1\n",
+            "Enter number:5\n",
+            "Please input numbers that are less than 5\n",
+            "Enter number:4\n",
+            "Enter number:3\n",
+            "The numbers you have entered are: [1.0, 2.0, 3.0, 4.0, 4.0, 3.0, 2.0, 1.0, 4.0, 3.0]\n",
+            "\n",
+            "The summation of all numbers that are less than 5 are equals to 27.0\n"
           ]
         }
       ]
@@ -111,7 +134,7 @@
         },
         "outputId": "1cd71e8b-3da2-4daa-89fe-1850cf6722ba"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +182,7 @@
         "id": "nVqM71Y8ffJc",
         "outputId": "a8891ad6-79f6-4509-f608-4c3502bf6da1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
